added a new endpoint to delete posts by user id
